# MetaReal

./: .gitignore  AEOA.md  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  TODO.md  test.mr  test.py  test.s
.github/workflows/: api-docs.yml
heads/: alloc.h  config.h  consts.h  defs.h  pos.h  stack.h
heads/error/: error.h  semantic.h
heads/generator/: generator.h
heads/lexer/: lexer.h  token.h
heads/optimizer/: complex.h  context.h  float.h  int.h  list.h  operation.h  optimizer.h  value.h
heads/parser/: node.h  parser.h
srcs/: alloc.c  config.c  main.c  stack.c
srcs/error/: error.c
srcs/generator/: generator.c
srcs/lexer/: lexer.c  token.c
srcs/optimizer/: complex.c  context.c  float.c  int.c  list.c  operation.c  optimizer.c  value.c
srcs/parser/: node.c  parser.c
